--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==3.1.5
 django-bootstrap3==14.2.0
 django-crispy-forms==1.11.0
 django-heroku==0.3.1
+gunicorn==20.0.4
 Pillow==8.1.0
 psycopg2==2.8.6
 python-decouple==3.4
